src/objects/HR_Job__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() - Date_Posted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Posted__c</fullName>
        <label>Date Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Skills__c</fullName>
        <label>Desired Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teamwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation Skills</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <label>Hiring Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <label>Job Category</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering - Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering - Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR - Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR - Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR - Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Enablement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Field Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Job_Location__c</fullName>
        <label>Job Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Required_Experience__c</fullName>
        <label>Required Experience</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Job_Responsibilities__c</fullName>
        <label>Job Responsibilities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <label>Recruiter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>HR Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Eric_s_Recommended_Jobs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Product</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>1,2,3,4</value>
        </filters>
        <label>Eric&apos;s Recommended Jobs</label>
    </listViews>
    <nameField>
        <label>HR Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>